--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=Karla&family=Marzaki+Text&display=swap"
       rel="stylesheet"
     >
+    <script src="%PUBLIC_URL%/api.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
